# Veritas

./: .mcp.json  A Rough Idea.md  frontend-remaining-tasks.md  frontend-v0-plan.md  news.json  v0-plan.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  schemas.py
backend/app/models/: __init__.py  timeline.py
backend/app/routers/: __init__.py  timelines.py
backend/app/services/: gemini_service.py
frontend/: AGENTS.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/event/: EventModal.tsx
frontend/src/components/shared/: LoadingState.tsx  ProgressBar.tsx  StatusBadge.tsx
frontend/src/components/tabs/: BranchesTab.tsx  EventsTab.tsx  SourcesTab.tsx
frontend/src/components/timeline/: TimelineVisualization.tsx
frontend/src/hooks/: useCreateTimeline.ts  useTimeline.ts  useTimelineStatus.ts
frontend/src/pages/: HomePage.tsx  NotFoundPage.tsx  TimelinePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: timeline.ts
frontend/src/utils/: colorScale.ts  credibilityScore.ts  dateFormatter.ts  logger.ts
